--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@huggingface/inference": "^3.1.2",
-    "@modelcontextprotocol/sdk": "^1.4.1"
+    "@modelcontextprotocol/sdk": "^1.4.1",
+    "groq-sdk": "^0.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.10"
